Update main to output generated at 45d6a65

--- a/trains/stations/A/index.html
+++ b/trains/stations/A/index.html
@@ -197,61 +197,89 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Acocks Green"
-          title="Acocks Green"
-          src="/images/trains/stations/acg.webp"
-        />
+          href="https://wikipedia.org/wiki/Acocks Green railway station"
+        >
+          <img
+            alt="Acocks Green"
+            title="Acocks Green"
+            src="/images/trains/stations/acg.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Adderley Park"
-          title="Adderley Park"
-          src="/images/trains/stations/add.webp"
-        />
+          href="https://wikipedia.org/wiki/Adderley Park railway station"
+        >
+          <img
+            alt="Adderley Park"
+            title="Adderley Park"
+            src="/images/trains/stations/add.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Albrighton"
-          title="Albrighton"
-          src="/images/trains/stations/alb.webp"
-        />
+          href="https://wikipedia.org/wiki/Albrighton railway station"
+        >
+          <img
+            alt="Albrighton"
+            title="Albrighton"
+            src="/images/trains/stations/alb.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Aldershot"
-          title="Aldershot"
-          src="/images/trains/stations/aht.webp"
-        />
+          href="https://wikipedia.org/wiki/Aldershot railway station"
+        >
+          <img
+            alt="Aldershot"
+            title="Aldershot"
+            src="/images/trains/stations/aht.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Alvechurch"
-          title="Alvechurch"
-          src="/images/trains/stations/alv.webp"
-        />
+          href="https://wikipedia.org/wiki/Alvechurch railway station"
+        >
+          <img
+            alt="Alvechurch"
+            title="Alvechurch"
+            src="/images/trains/stations/alv.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Ash"
-          title="Ash"
-          src="/images/trains/stations/ash.webp"
-        />
+          href="https://wikipedia.org/wiki/Ash railway station"
+        >
+          <img alt="Ash" title="Ash" src="/images/trains/stations/ash.webp" />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Ashurst New Forest"
-          title="Ashurst New Forest"
-          src="/images/trains/stations/anf.webp"
-        />
+          href="https://wikipedia.org/wiki/Ashurst New Forest railway station"
+        >
+          <img
+            alt="Ashurst New Forest"
+            title="Ashurst New Forest"
+            src="/images/trains/stations/anf.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Aston"
-          title="Aston"
-          src="/images/trains/stations/ast.webp"
-        />
+          href="https://wikipedia.org/wiki/Aston railway station"
+        >
+          <img
+            alt="Aston"
+            title="Aston"
+            src="/images/trains/stations/ast.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
