--- a/trains/stations/B/index.html
+++ b/trains/stations/B/index.html
@@ -197,110 +197,170 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Banbury"
-          title="Banbury"
-          src="/images/trains/stations/ban.webp"
-        />
+          href="https://wikipedia.org/wiki/Banbury railway station"
+        >
+          <img
+            alt="Banbury"
+            title="Banbury"
+            src="/images/trains/stations/ban.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Barnt Green"
-          title="Barnt Green"
-          src="/images/trains/stations/btg.webp"
-        />
+          href="https://wikipedia.org/wiki/Barnt Green railway station"
+        >
+          <img
+            alt="Barnt Green"
+            title="Barnt Green"
+            src="/images/trains/stations/btg.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Barrow-in-Furness"
-          title="Barrow-in-Furness"
-          src="/images/trains/stations/bif.webp"
-        />
+          href="https://wikipedia.org/wiki/Barrow-in-Furness railway station"
+        >
+          <img
+            alt="Barrow-in-Furness"
+            title="Barrow-in-Furness"
+            src="/images/trains/stations/bif.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Bearley"
-          title="Bearley"
-          src="/images/trains/stations/ber.webp"
-        />
+          href="https://wikipedia.org/wiki/Bearley railway station"
+        >
+          <img
+            alt="Bearley"
+            title="Bearley"
+            src="/images/trains/stations/ber.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Beaulieu Road"
-          title="Beaulieu Road"
-          src="/images/trains/stations/beu.webp"
-        />
+          href="https://wikipedia.org/wiki/Beaulieu Road railway station"
+        >
+          <img
+            alt="Beaulieu Road"
+            title="Beaulieu Road"
+            src="/images/trains/stations/beu.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Beeston"
-          title="Beeston"
-          src="/images/trains/stations/bee.webp"
-        />
+          href="https://wikipedia.org/wiki/Beeston railway station"
+        >
+          <img
+            alt="Beeston"
+            title="Beeston"
+            src="/images/trains/stations/bee.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Berkswell"
-          title="Berkswell"
-          src="/images/trains/stations/bkw.webp"
-        />
+          href="https://wikipedia.org/wiki/Berkswell railway station"
+        >
+          <img
+            alt="Berkswell"
+            title="Berkswell"
+            src="/images/trains/stations/bkw.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Bescot Stadium"
-          title="Bescot Stadium"
-          src="/images/trains/stations/bsc.webp"
-        />
+          href="https://wikipedia.org/wiki/Bescot Stadium railway station"
+        >
+          <img
+            alt="Bescot Stadium"
+            title="Bescot Stadium"
+            src="/images/trains/stations/bsc.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Birmingham International"
-          title="Birmingham International"
-          src="/images/trains/stations/bhi.webp"
-        />
+          href="https://wikipedia.org/wiki/Birmingham International railway station"
+        >
+          <img
+            alt="Birmingham International"
+            title="Birmingham International"
+            src="/images/trains/stations/bhi.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Birmingham New Street"
-          title="Birmingham New Street"
-          src="/images/trains/stations/bhm.webp"
-        />
+          href="https://wikipedia.org/wiki/Birmingham New Street railway station"
+        >
+          <img
+            alt="Birmingham New Street"
+            title="Birmingham New Street"
+            src="/images/trains/stations/bhm.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Birmingham Snow Hill"
-          title="Birmingham Snow Hill"
-          src="/images/trains/stations/bsw.webp"
-        />
+          href="https://wikipedia.org/wiki/Birmingham Snow Hill railway station"
+        >
+          <img
+            alt="Birmingham Snow Hill"
+            title="Birmingham Snow Hill"
+            src="/images/trains/stations/bsw.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Blake Street"
-          title="Blake Street"
-          src="/images/trains/stations/bkt.webp"
-        />
+          href="https://wikipedia.org/wiki/Blake Street railway station"
+        >
+          <img
+            alt="Blake Street"
+            title="Blake Street"
+            src="/images/trains/stations/bkt.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Bordesley"
-          title="Bordesley"
-          src="/images/trains/stations/bbs.webp"
-        />
+          href="https://wikipedia.org/wiki/Bordesley railway station"
+        >
+          <img
+            alt="Bordesley"
+            title="Bordesley"
+            src="/images/trains/stations/bbs.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Brockenhurst"
-          title="Brockenhurst"
-          src="/images/trains/stations/bcu.webp"
-        />
+          href="https://wikipedia.org/wiki/Brockenhurst railway station"
+        >
+          <img
+            alt="Brockenhurst"
+            title="Brockenhurst"
+            src="/images/trains/stations/bcu.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Butlers Lane"
-          title="Butlers Lane"
-          src="/images/trains/stations/bul.webp"
-        />
+          href="https://wikipedia.org/wiki/Butlers Lane railway station"
+        >
+          <img
+            alt="Butlers Lane"
+            title="Butlers Lane"
+            src="/images/trains/stations/bul.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
