--- a/trains/stations/C/index.html
+++ b/trains/stations/C/index.html
@@ -197,124 +197,192 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Cambridge"
-          title="Cambridge"
-          src="/images/trains/stations/cbg.webp"
-        />
+          href="https://wikipedia.org/wiki/Cambridge railway station"
+        >
+          <img
+            alt="Cambridge"
+            title="Cambridge"
+            src="/images/trains/stations/cbg.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Cambridge North"
-          title="Cambridge North"
-          src="/images/trains/stations/cmb.webp"
-        />
+          href="https://wikipedia.org/wiki/Cambridge North railway station"
+        >
+          <img
+            alt="Cambridge North"
+            title="Cambridge North"
+            src="/images/trains/stations/cmb.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Canley"
-          title="Canley"
-          src="/images/trains/stations/cnl.webp"
-        />
+          href="https://wikipedia.org/wiki/Canley railway station"
+        >
+          <img
+            alt="Canley"
+            title="Canley"
+            src="/images/trains/stations/cnl.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Chester"
-          title="Chester"
-          src="/images/trains/stations/ctr.webp"
-        />
+          href="https://wikipedia.org/wiki/Chester railway station"
+        >
+          <img
+            alt="Chester"
+            title="Chester"
+            src="/images/trains/stations/ctr.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Chester Road"
-          title="Chester Road"
-          src="/images/trains/stations/crd.webp"
-        />
+          href="https://wikipedia.org/wiki/Chester Road railway station"
+        >
+          <img
+            alt="Chester Road"
+            title="Chester Road"
+            src="/images/trains/stations/crd.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Chirk"
-          title="Chirk"
-          src="/images/trains/stations/crk.webp"
-        />
+          href="https://wikipedia.org/wiki/Chirk railway station"
+        >
+          <img
+            alt="Chirk"
+            title="Chirk"
+            src="/images/trains/stations/crk.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Church Stretton"
-          title="Church Stretton"
-          src="/images/trains/stations/ctt.webp"
-        />
+          href="https://wikipedia.org/wiki/Church Stretton railway station"
+        >
+          <img
+            alt="Church Stretton"
+            title="Church Stretton"
+            src="/images/trains/stations/ctt.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Claverdon"
-          title="Claverdon"
-          src="/images/trains/stations/clv.webp"
-        />
+          href="https://wikipedia.org/wiki/Claverdon railway station"
+        >
+          <img
+            alt="Claverdon"
+            title="Claverdon"
+            src="/images/trains/stations/clv.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Colwall"
-          title="Colwall"
-          src="/images/trains/stations/cwl.webp"
-        />
+          href="https://wikipedia.org/wiki/Colwall railway station"
+        >
+          <img
+            alt="Colwall"
+            title="Colwall"
+            src="/images/trains/stations/cwl.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Corkickle"
-          title="Corkickle"
-          src="/images/trains/stations/ckl.webp"
-        />
+          href="https://wikipedia.org/wiki/Corkickle railway station"
+        >
+          <img
+            alt="Corkickle"
+            title="Corkickle"
+            src="/images/trains/stations/ckl.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Corrour"
-          title="Corrour"
-          src="/images/trains/stations/crr.webp"
-        />
+          href="https://wikipedia.org/wiki/Corrour railway station"
+        >
+          <img
+            alt="Corrour"
+            title="Corrour"
+            src="/images/trains/stations/crr.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Coseley"
-          title="Coseley"
-          src="/images/trains/stations/csy.webp"
-        />
+          href="https://wikipedia.org/wiki/Coseley railway station"
+        >
+          <img
+            alt="Coseley"
+            title="Coseley"
+            src="/images/trains/stations/csy.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Cosford"
-          title="Cosford"
-          src="/images/trains/stations/cos.webp"
-        />
+          href="https://wikipedia.org/wiki/Cosford railway station"
+        >
+          <img
+            alt="Cosford"
+            title="Cosford"
+            src="/images/trains/stations/cos.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Coventry"
-          title="Coventry"
-          src="/images/trains/stations/cov.webp"
-        />
+          href="https://wikipedia.org/wiki/Coventry railway station"
+        >
+          <img
+            alt="Coventry"
+            title="Coventry"
+            src="/images/trains/stations/cov.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Cradley Heath"
-          title="Cradley Heath"
-          src="/images/trains/stations/cra.webp"
-        />
+          href="https://wikipedia.org/wiki/Cradley Heath railway station"
+        >
+          <img
+            alt="Cradley Heath"
+            title="Cradley Heath"
+            src="/images/trains/stations/cra.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Crewe"
-          title="Crewe"
-          src="/images/trains/stations/cre.webp"
-        />
+          href="https://wikipedia.org/wiki/Crewe railway station"
+        >
+          <img
+            alt="Crewe"
+            title="Crewe"
+            src="/images/trains/stations/cre.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Cromford"
-          title="Cromford"
-          src="/images/trains/stations/cmf.webp"
-        />
+          href="https://wikipedia.org/wiki/Cromford railway station"
+        >
+          <img
+            alt="Cromford"
+            title="Cromford"
+            src="/images/trains/stations/cmf.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
