--- a/trains/stations/D/index.html
+++ b/trains/stations/D/index.html
@@ -197,33 +197,49 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Dalmeny"
-          title="Dalmeny"
-          src="/images/trains/stations/dam.webp"
-        />
+          href="https://wikipedia.org/wiki/Dalmeny railway station"
+        >
+          <img
+            alt="Dalmeny"
+            title="Dalmeny"
+            src="/images/trains/stations/dam.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Deansgate"
-          title="Deansgate"
-          src="/images/trains/stations/dgt.webp"
-        />
+          href="https://wikipedia.org/wiki/Deansgate railway station"
+        >
+          <img
+            alt="Deansgate"
+            title="Deansgate"
+            src="/images/trains/stations/dgt.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Didcot Parkway"
-          title="Didcot Parkway"
-          src="/images/trains/stations/did.webp"
-        />
+          href="https://wikipedia.org/wiki/Didcot Parkway railway station"
+        >
+          <img
+            alt="Didcot Parkway"
+            title="Didcot Parkway"
+            src="/images/trains/stations/did.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Duddeston"
-          title="Duddeston"
-          src="/images/trains/stations/dud.webp"
-        />
+          href="https://wikipedia.org/wiki/Duddeston railway station"
+        >
+          <img
+            alt="Duddeston"
+            title="Duddeston"
+            src="/images/trains/stations/dud.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
