--- a/trains/stations/E/index.html
+++ b/trains/stations/E/index.html
@@ -197,19 +197,27 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Earlswood"
-          title="Earlswood"
-          src="/images/trains/stations/ewd.webp"
-        />
+          href="https://wikipedia.org/wiki/Earlswood railway station"
+        >
+          <img
+            alt="Earlswood"
+            title="Earlswood"
+            src="/images/trains/stations/ewd.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Elephant & Castle"
-          title="Elephant & Castle"
-          src="/images/trains/stations/eph.webp"
-        />
+          href="https://wikipedia.org/wiki/Elephant & Castle railway station"
+        >
+          <img
+            alt="Elephant & Castle"
+            title="Elephant & Castle"
+            src="/images/trains/stations/eph.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
