--- a/trains/stations/F/index.html
+++ b/trains/stations/F/index.html
@@ -197,26 +197,38 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Farringdon"
-          title="Farringdon"
-          src="/images/trains/stations/zfd.webp"
-        />
+          href="https://wikipedia.org/wiki/Farringdon railway station"
+        >
+          <img
+            alt="Farringdon"
+            title="Farringdon"
+            src="/images/trains/stations/zfd.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Fort William"
-          title="Fort William"
-          src="/images/trains/stations/ftw.webp"
-        />
+          href="https://wikipedia.org/wiki/Fort William railway station"
+        >
+          <img
+            alt="Fort William"
+            title="Fort William"
+            src="/images/trains/stations/ftw.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Four Oaks"
-          title="Four Oaks"
-          src="/images/trains/stations/fok.webp"
-        />
+          href="https://wikipedia.org/wiki/Four Oaks railway station"
+        >
+          <img
+            alt="Four Oaks"
+            title="Four Oaks"
+            src="/images/trains/stations/fok.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
