--- a/trains/stations/G/index.html
+++ b/trains/stations/G/index.html
@@ -197,47 +197,71 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Gatwick Airport"
-          title="Gatwick Airport"
-          src="/images/trains/stations/gtw.webp"
-        />
+          href="https://wikipedia.org/wiki/Gatwick Airport railway station"
+        >
+          <img
+            alt="Gatwick Airport"
+            title="Gatwick Airport"
+            src="/images/trains/stations/gtw.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Glenfinnan"
-          title="Glenfinnan"
-          src="/images/trains/stations/glf.webp"
-        />
+          href="https://wikipedia.org/wiki/Glenfinnan railway station"
+        >
+          <img
+            alt="Glenfinnan"
+            title="Glenfinnan"
+            src="/images/trains/stations/glf.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Gloucester"
-          title="Gloucester"
-          src="/images/trains/stations/gcr.webp"
-        />
+          href="https://wikipedia.org/wiki/Gloucester railway station"
+        >
+          <img
+            alt="Gloucester"
+            title="Gloucester"
+            src="/images/trains/stations/gcr.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Gravelly Hill"
-          title="Gravelly Hill"
-          src="/images/trains/stations/gvh.webp"
-        />
+          href="https://wikipedia.org/wiki/Gravelly Hill railway station"
+        >
+          <img
+            alt="Gravelly Hill"
+            title="Gravelly Hill"
+            src="/images/trains/stations/gvh.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Great Malvern"
-          title="Great Malvern"
-          src="/images/trains/stations/gmv.webp"
-        />
+          href="https://wikipedia.org/wiki/Great Malvern railway station"
+        >
+          <img
+            alt="Great Malvern"
+            title="Great Malvern"
+            src="/images/trains/stations/gmv.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Glasgow Queen Street"
-          title="Glasgow Queen Street"
-          src="/images/trains/stations/glq.webp"
-        />
+          href="https://wikipedia.org/wiki/Glasgow Queen Street railway station"
+        >
+          <img
+            alt="Glasgow Queen Street"
+            title="Glasgow Queen Street"
+            src="/images/trains/stations/glq.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
