--- a/trains/stations/J/index.html
+++ b/trains/stations/J/index.html
@@ -197,12 +197,16 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Jewellery Quarter"
-          title="Jewellery Quarter"
-          src="/images/trains/stations/jeq.webp"
-        />
+          href="https://wikipedia.org/wiki/Jewellery Quarter railway station"
+        >
+          <img
+            alt="Jewellery Quarter"
+            title="Jewellery Quarter"
+            src="/images/trains/stations/jeq.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
