--- a/trains/stations/K/index.html
+++ b/trains/stations/K/index.html
@@ -197,12 +197,16 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Kingham"
-          title="Kingham"
-          src="/images/trains/stations/kgm.webp"
-        />
+          href="https://wikipedia.org/wiki/Kingham railway station"
+        >
+          <img
+            alt="Kingham"
+            title="Kingham"
+            src="/images/trains/stations/kgm.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
