--- a/trains/stations/L/index.html
+++ b/trains/stations/L/index.html
@@ -197,96 +197,144 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Lancaster"
-          title="Lancaster"
-          src="/images/trains/stations/lan.webp"
-        />
+          href="https://wikipedia.org/wiki/Lancaster railway station"
+        >
+          <img
+            alt="Lancaster"
+            title="Lancaster"
+            src="/images/trains/stations/lan.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Lea Hall"
-          title="Lea Hall"
-          src="/images/trains/stations/leh.webp"
-        />
+          href="https://wikipedia.org/wiki/Lea Hall railway station"
+        >
+          <img
+            alt="Lea Hall"
+            title="Lea Hall"
+            src="/images/trains/stations/leh.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Leamington Spa"
-          title="Leamington Spa"
-          src="/images/trains/stations/lms.webp"
-        />
+          href="https://wikipedia.org/wiki/Leamington Spa railway station"
+        >
+          <img
+            alt="Leamington Spa"
+            title="Leamington Spa"
+            src="/images/trains/stations/lms.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Ledbury"
-          title="Ledbury"
-          src="/images/trains/stations/led.webp"
-        />
+          href="https://wikipedia.org/wiki/Ledbury railway station"
+        >
+          <img
+            alt="Ledbury"
+            title="Ledbury"
+            src="/images/trains/stations/led.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Leeds"
-          title="Leeds"
-          src="/images/trains/stations/lds.webp"
-        />
+          href="https://wikipedia.org/wiki/Leeds railway station"
+        >
+          <img
+            alt="Leeds"
+            title="Leeds"
+            src="/images/trains/stations/lds.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Lichfield City"
-          title="Lichfield City"
-          src="/images/trains/stations/lic.webp"
-        />
+          href="https://wikipedia.org/wiki/Lichfield City railway station"
+        >
+          <img
+            alt="Lichfield City"
+            title="Lichfield City"
+            src="/images/trains/stations/lic.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="London Bridge"
-          title="London Bridge"
-          src="/images/trains/stations/lbg.webp"
-        />
+          href="https://wikipedia.org/wiki/London Bridge railway station"
+        >
+          <img
+            alt="London Bridge"
+            title="London Bridge"
+            src="/images/trains/stations/lbg.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="London Euston"
-          title="London Euston"
-          src="/images/trains/stations/eus.webp"
-        />
+          href="https://wikipedia.org/wiki/London Euston railway station"
+        >
+          <img
+            alt="London Euston"
+            title="London Euston"
+            src="/images/trains/stations/eus.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="London Marylebone"
-          title="London Marylebone"
-          src="/images/trains/stations/myb.webp"
-        />
+          href="https://wikipedia.org/wiki/London Marylebone railway station"
+        >
+          <img
+            alt="London Marylebone"
+            title="London Marylebone"
+            src="/images/trains/stations/myb.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Longbridge"
-          title="Longbridge"
-          src="/images/trains/stations/lob.webp"
-        />
+          href="https://wikipedia.org/wiki/Longbridge railway station"
+        >
+          <img
+            alt="Longbridge"
+            title="Longbridge"
+            src="/images/trains/stations/lob.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Lye"
-          title="Lye"
-          src="/images/trains/stations/lye.webp"
-        />
+          href="https://wikipedia.org/wiki/Lye railway station"
+        >
+          <img alt="Lye" title="Lye" src="/images/trains/stations/lye.webp" />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Lymington Pier"
-          title="Lymington Pier"
-          src="/images/trains/stations/lyp.webp"
-        />
+          href="https://wikipedia.org/wiki/Lymington Pier railway station"
+        >
+          <img
+            alt="Lymington Pier"
+            title="Lymington Pier"
+            src="/images/trains/stations/lyp.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Lymington Town"
-          title="Lymington Town"
-          src="/images/trains/stations/lyt.webp"
-        />
+          href="https://wikipedia.org/wiki/Lymington Town railway station"
+        >
+          <img
+            alt="Lymington Town"
+            title="Lymington Town"
+            src="/images/trains/stations/lyt.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
