--- a/trains/stations/M/index.html
+++ b/trains/stations/M/index.html
@@ -197,61 +197,93 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Malvern Link"
-          title="Malvern Link"
-          src="/images/trains/stations/mvl.webp"
-        />
+          href="https://wikipedia.org/wiki/Malvern Link railway station"
+        >
+          <img
+            alt="Malvern Link"
+            title="Malvern Link"
+            src="/images/trains/stations/mvl.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Manchester Airport"
-          title="Manchester Airport"
-          src="/images/trains/stations/mia.webp"
-        />
+          href="https://wikipedia.org/wiki/Manchester Airport railway station"
+        >
+          <img
+            alt="Manchester Airport"
+            title="Manchester Airport"
+            src="/images/trains/stations/mia.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Manchester Piccadilly"
-          title="Manchester Piccadilly"
-          src="/images/trains/stations/man.webp"
-        />
+          href="https://wikipedia.org/wiki/Manchester Piccadilly railway station"
+        >
+          <img
+            alt="Manchester Piccadilly"
+            title="Manchester Piccadilly"
+            src="/images/trains/stations/man.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Manchester Oxford Road"
-          title="Manchester Oxford Road"
-          src="/images/trains/stations/mco.webp"
-        />
+          href="https://wikipedia.org/wiki/Manchester Oxford Road railway station"
+        >
+          <img
+            alt="Manchester Oxford Road"
+            title="Manchester Oxford Road"
+            src="/images/trains/stations/mco.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Marston Green"
-          title="Marston Green"
-          src="/images/trains/stations/mgn.webp"
-        />
+          href="https://wikipedia.org/wiki/Marston Green railway station"
+        >
+          <img
+            alt="Marston Green"
+            title="Marston Green"
+            src="/images/trains/stations/mgn.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Matlock"
-          title="Matlock"
-          src="/images/trains/stations/mat.webp"
-        />
+          href="https://wikipedia.org/wiki/Matlock railway station"
+        >
+          <img
+            alt="Matlock"
+            title="Matlock"
+            src="/images/trains/stations/mat.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Matlock Bath"
-          title="Matlock Bath"
-          src="/images/trains/stations/mtb.webp"
-        />
+          href="https://wikipedia.org/wiki/Matlock Bath railway station"
+        >
+          <img
+            alt="Matlock Bath"
+            title="Matlock Bath"
+            src="/images/trains/stations/mtb.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Moreton-in-Marsh"
-          title="Moreton-in-Marsh"
-          src="/images/trains/stations/mim.webp"
-        />
+          href="https://wikipedia.org/wiki/Moreton-in-Marsh railway station"
+        >
+          <img
+            alt="Moreton-in-Marsh"
+            title="Moreton-in-Marsh"
+            src="/images/trains/stations/mim.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
