--- a/trains/stations/N/index.html
+++ b/trains/stations/N/index.html
@@ -197,33 +197,49 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Nottingham"
-          title="Nottingham"
-          src="/images/trains/stations/not.webp"
-        />
+          href="https://wikipedia.org/wiki/Nottingham railway station"
+        >
+          <img
+            alt="Nottingham"
+            title="Nottingham"
+            src="/images/trains/stations/not.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="North Queensferry"
-          title="North Queensferry"
-          src="/images/trains/stations/nqu.webp"
-        />
+          href="https://wikipedia.org/wiki/North Queensferry railway station"
+        >
+          <img
+            alt="North Queensferry"
+            title="North Queensferry"
+            src="/images/trains/stations/nqu.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Northfield"
-          title="Northfield"
-          src="/images/trains/stations/nfd.webp"
-        />
+          href="https://wikipedia.org/wiki/Northfield railway station"
+        >
+          <img
+            alt="Northfield"
+            title="Northfield"
+            src="/images/trains/stations/nfd.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Nuneaton"
-          title="Nuneaton"
-          src="/images/trains/stations/nun.webp"
-        />
+          href="https://wikipedia.org/wiki/Nuneaton railway station"
+        >
+          <img
+            alt="Nuneaton"
+            title="Nuneaton"
+            src="/images/trains/stations/nun.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
