--- a/trains/stations/O/index.html
+++ b/trains/stations/O/index.html
@@ -197,26 +197,38 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Oakham"
-          title="Oakham"
-          src="/images/trains/stations/okm.webp"
-        />
+          href="https://wikipedia.org/wiki/Oakham railway station"
+        >
+          <img
+            alt="Oakham"
+            title="Oakham"
+            src="/images/trains/stations/okm.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Old Hill"
-          title="Old Hill"
-          src="/images/trains/stations/ohl.webp"
-        />
+          href="https://wikipedia.org/wiki/Old Hill railway station"
+        >
+          <img
+            alt="Old Hill"
+            title="Old Hill"
+            src="/images/trains/stations/ohl.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Olton"
-          title="Olton"
-          src="/images/trains/stations/olt.webp"
-        />
+          href="https://wikipedia.org/wiki/Olton railway station"
+        >
+          <img
+            alt="Olton"
+            title="Olton"
+            src="/images/trains/stations/olt.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
