--- a/trains/stations/P/index.html
+++ b/trains/stations/P/index.html
@@ -197,40 +197,60 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Partick"
-          title="Partick"
-          src="/images/trains/stations/ptk.webp"
-        />
+          href="https://wikipedia.org/wiki/Partick railway station"
+        >
+          <img
+            alt="Partick"
+            title="Partick"
+            src="/images/trains/stations/ptk.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Penkridge"
-          title="Penkridge"
-          src="/images/trains/stations/pkg.webp"
-        />
+          href="https://wikipedia.org/wiki/Penkridge railway station"
+        >
+          <img
+            alt="Penkridge"
+            title="Penkridge"
+            src="/images/trains/stations/pkg.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Perry Barr"
-          title="Perry Barr"
-          src="/images/trains/stations/pry.webp"
-        />
+          href="https://wikipedia.org/wiki/Perry Barr railway station"
+        >
+          <img
+            alt="Perry Barr"
+            title="Perry Barr"
+            src="/images/trains/stations/pry.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Polesworth"
-          title="Polesworth"
-          src="/images/trains/stations/psw.webp"
-        />
+          href="https://wikipedia.org/wiki/Polesworth railway station"
+        >
+          <img
+            alt="Polesworth"
+            title="Polesworth"
+            src="/images/trains/stations/psw.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Preston"
-          title="Preston"
-          src="/images/trains/stations/pre.webp"
-        />
+          href="https://wikipedia.org/wiki/Preston railway station"
+        >
+          <img
+            alt="Preston"
+            title="Preston"
+            src="/images/trains/stations/pre.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
