--- a/trains/stations/R/index.html
+++ b/trains/stations/R/index.html
@@ -197,47 +197,71 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Reading"
-          title="Reading"
-          src="/images/trains/stations/rdg.webp"
-        />
+          href="https://wikipedia.org/wiki/Reading railway station"
+        >
+          <img
+            alt="Reading"
+            title="Reading"
+            src="/images/trains/stations/rdg.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Redditch"
-          title="Redditch"
-          src="/images/trains/stations/rdt.webp"
-        />
+          href="https://wikipedia.org/wiki/Redditch railway station"
+        >
+          <img
+            alt="Redditch"
+            title="Redditch"
+            src="/images/trains/stations/rdt.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Rowley Regis"
-          title="Rowley Regis"
-          src="/images/trains/stations/row.webp"
-        />
+          href="https://wikipedia.org/wiki/Rowley Regis railway station"
+        >
+          <img
+            alt="Rowley Regis"
+            title="Rowley Regis"
+            src="/images/trains/stations/row.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Ruabon"
-          title="Ruabon"
-          src="/images/trains/stations/rua.webp"
-        />
+          href="https://wikipedia.org/wiki/Ruabon railway station"
+        >
+          <img
+            alt="Ruabon"
+            title="Ruabon"
+            src="/images/trains/stations/rua.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Rugby"
-          title="Rugby"
-          src="/images/trains/stations/rug.webp"
-        />
+          href="https://wikipedia.org/wiki/Rugby railway station"
+        >
+          <img
+            alt="Rugby"
+            title="Rugby"
+            src="/images/trains/stations/rug.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Rugeley Trent Valley"
-          title="Rugeley Trent Valley"
-          src="/images/trains/stations/rgl.webp"
-        />
+          href="https://wikipedia.org/wiki/Rugeley Trent Valley railway station"
+        >
+          <img
+            alt="Rugeley Trent Valley"
+            title="Rugeley Trent Valley"
+            src="/images/trains/stations/rgl.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
