--- a/trains/stations/S/index.html
+++ b/trains/stations/S/index.html
@@ -197,152 +197,236 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Sandwell and Dudley"
-          title="Sandwell and Dudley"
-          src="/images/trains/stations/sad.webp"
-        />
+          href="https://wikipedia.org/wiki/Sandwell and Dudley railway station"
+        >
+          <img
+            alt="Sandwell and Dudley"
+            title="Sandwell and Dudley"
+            src="/images/trains/stations/sad.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Selly Oak"
-          title="Selly Oak"
-          src="/images/trains/stations/sly.webp"
-        />
+          href="https://wikipedia.org/wiki/Selly Oak railway station"
+        >
+          <img
+            alt="Selly Oak"
+            title="Selly Oak"
+            src="/images/trains/stations/sly.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Shenstone"
-          title="Shenstone"
-          src="/images/trains/stations/sen.webp"
-        />
+          href="https://wikipedia.org/wiki/Shenstone railway station"
+        >
+          <img
+            alt="Shenstone"
+            title="Shenstone"
+            src="/images/trains/stations/sen.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Shipton"
-          title="Shipton"
-          src="/images/trains/stations/sip.webp"
-        />
+          href="https://wikipedia.org/wiki/Shipton railway station"
+        >
+          <img
+            alt="Shipton"
+            title="Shipton"
+            src="/images/trains/stations/sip.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Shirley"
-          title="Shirley"
-          src="/images/trains/stations/srl.webp"
-        />
+          href="https://wikipedia.org/wiki/Shirley railway station"
+        >
+          <img
+            alt="Shirley"
+            title="Shirley"
+            src="/images/trains/stations/srl.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Shrewsbury"
-          title="Shrewsbury"
-          src="/images/trains/stations/shr.webp"
-        />
+          href="https://wikipedia.org/wiki/Shrewsbury railway station"
+        >
+          <img
+            alt="Shrewsbury"
+            title="Shrewsbury"
+            src="/images/trains/stations/shr.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Small Heath"
-          title="Small Heath"
-          src="/images/trains/stations/sma.webp"
-        />
+          href="https://wikipedia.org/wiki/Small Heath railway station"
+        >
+          <img
+            alt="Small Heath"
+            title="Small Heath"
+            src="/images/trains/stations/sma.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Smethwick Galton Bridge"
-          title="Smethwick Galton Bridge"
-          src="/images/trains/stations/sgb.webp"
-        />
+          href="https://wikipedia.org/wiki/Smethwick Galton Bridge railway station"
+        >
+          <img
+            alt="Smethwick Galton Bridge"
+            title="Smethwick Galton Bridge"
+            src="/images/trains/stations/sgb.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Smethwick Rolfe Street"
-          title="Smethwick Rolfe Street"
-          src="/images/trains/stations/smr.webp"
-        />
+          href="https://wikipedia.org/wiki/Smethwick Rolfe Street railway station"
+        >
+          <img
+            alt="Smethwick Rolfe Street"
+            title="Smethwick Rolfe Street"
+            src="/images/trains/stations/smr.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Spring Road"
-          title="Spring Road"
-          src="/images/trains/stations/sri.webp"
-        />
+          href="https://wikipedia.org/wiki/Spring Road railway station"
+        >
+          <img
+            alt="Spring Road"
+            title="Spring Road"
+            src="/images/trains/stations/sri.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Stafford"
-          title="Stafford"
-          src="/images/trains/stations/sta.webp"
-        />
+          href="https://wikipedia.org/wiki/Stafford railway station"
+        >
+          <img
+            alt="Stafford"
+            title="Stafford"
+            src="/images/trains/stations/sta.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Stamford"
-          title="Stamford"
-          src="/images/trains/stations/smd.webp"
-        />
+          href="https://wikipedia.org/wiki/Stamford railway station"
+        >
+          <img
+            alt="Stamford"
+            title="Stamford"
+            src="/images/trains/stations/smd.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Stansted Airport"
-          title="Stansted Airport"
-          src="/images/trains/stations/ssd.webp"
-        />
+          href="https://wikipedia.org/wiki/Stansted Airport railway station"
+        >
+          <img
+            alt="Stansted Airport"
+            title="Stansted Airport"
+            src="/images/trains/stations/ssd.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Stechford"
-          title="Stechford"
-          src="/images/trains/stations/scf.webp"
-        />
+          href="https://wikipedia.org/wiki/Stechford railway station"
+        >
+          <img
+            alt="Stechford"
+            title="Stechford"
+            src="/images/trains/stations/scf.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Stoke-on-Trent"
-          title="Stoke-on-Trent"
-          src="/images/trains/stations/sot.webp"
-        />
+          href="https://wikipedia.org/wiki/Stoke-on-Trent railway station"
+        >
+          <img
+            alt="Stoke-on-Trent"
+            title="Stoke-on-Trent"
+            src="/images/trains/stations/sot.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Stone"
-          title="Stone"
-          src="/images/trains/stations/sne.webp"
-        />
+          href="https://wikipedia.org/wiki/Stone railway station"
+        >
+          <img
+            alt="Stone"
+            title="Stone"
+            src="/images/trains/stations/sne.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Stourbridge Junction"
-          title="Stourbridge Junction"
-          src="/images/trains/stations/sbj.webp"
-        />
+          href="https://wikipedia.org/wiki/Stourbridge Junction railway station"
+        >
+          <img
+            alt="Stourbridge Junction"
+            title="Stourbridge Junction"
+            src="/images/trains/stations/sbj.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Stourbridge Town"
-          title="Stourbridge Town"
-          src="/images/trains/stations/sbt.webp"
-        />
+          href="https://wikipedia.org/wiki/Stourbridge Town railway station"
+        >
+          <img
+            alt="Stourbridge Town"
+            title="Stourbridge Town"
+            src="/images/trains/stations/sbt.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Stratford-upon-Avon Parkway"
-          title="Stratford-upon-Avon Parkway"
-          src="/images/trains/stations/sty.webp"
-        />
+          href="https://wikipedia.org/wiki/Stratford-upon-Avon Parkway railway station"
+        >
+          <img
+            alt="Stratford-upon-Avon Parkway"
+            title="Stratford-upon-Avon Parkway"
+            src="/images/trains/stations/sty.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Sutton Coldfield"
-          title="Sutton Coldfield"
-          src="/images/trains/stations/sut.webp"
-        />
+          href="https://wikipedia.org/wiki/Sutton Coldfield railway station"
+        >
+          <img
+            alt="Sutton Coldfield"
+            title="Sutton Coldfield"
+            src="/images/trains/stations/sut.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Swindon"
-          title="Swindon"
-          src="/images/trains/stations/swi.webp"
-        />
+          href="https://wikipedia.org/wiki/Swindon railway station"
+        >
+          <img
+            alt="Swindon"
+            title="Swindon"
+            src="/images/trains/stations/swi.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
