--- a/trains/stations/T/index.html
+++ b/trains/stations/T/index.html
@@ -197,75 +197,115 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Tame Bridge Parkway"
-          title="Tame Bridge Parkway"
-          src="/images/trains/stations/tab.webp"
-        />
+          href="https://wikipedia.org/wiki/Tame Bridge Parkway railway station"
+        >
+          <img
+            alt="Tame Bridge Parkway"
+            title="Tame Bridge Parkway"
+            src="/images/trains/stations/tab.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Telford Central"
-          title="Telford Central"
-          src="/images/trains/stations/tfc.webp"
-        />
+          href="https://wikipedia.org/wiki/Telford Central railway station"
+        >
+          <img
+            alt="Telford Central"
+            title="Telford Central"
+            src="/images/trains/stations/tfc.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="The Hawthorns"
-          title="The Hawthorns"
-          src="/images/trains/stations/thw.webp"
-        />
+          href="https://wikipedia.org/wiki/The Hawthorns railway station"
+        >
+          <img
+            alt="The Hawthorns"
+            title="The Hawthorns"
+            src="/images/trains/stations/thw.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="The Lakes"
-          title="The Lakes"
-          src="/images/trains/stations/tlk.webp"
-        />
+          href="https://wikipedia.org/wiki/The Lakes railway station"
+        >
+          <img
+            alt="The Lakes"
+            title="The Lakes"
+            src="/images/trains/stations/tlk.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Tile Hill"
-          title="Tile Hill"
-          src="/images/trains/stations/thl.webp"
-        />
+          href="https://wikipedia.org/wiki/Tile Hill railway station"
+        >
+          <img
+            alt="Tile Hill"
+            title="Tile Hill"
+            src="/images/trains/stations/thl.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Totnes"
-          title="Totnes"
-          src="/images/trains/stations/tot.webp"
-        />
+          href="https://wikipedia.org/wiki/Totnes railway station"
+        >
+          <img
+            alt="Totnes"
+            title="Totnes"
+            src="/images/trains/stations/tot.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Tottenham Hale"
-          title="Tottenham Hale"
-          src="/images/trains/stations/tom.webp"
-        />
+          href="https://wikipedia.org/wiki/Tottenham Hale railway station"
+        >
+          <img
+            alt="Tottenham Hale"
+            title="Tottenham Hale"
+            src="/images/trains/stations/tom.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Tulse Hill"
-          title="Tulse Hill"
-          src="/images/trains/stations/tuh.webp"
-        />
+          href="https://wikipedia.org/wiki/Tulse Hill railway station"
+        >
+          <img
+            alt="Tulse Hill"
+            title="Tulse Hill"
+            src="/images/trains/stations/tuh.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Twyford"
-          title="Twyford"
-          src="/images/trains/stations/twy.webp"
-        />
+          href="https://wikipedia.org/wiki/Twyford railway station"
+        >
+          <img
+            alt="Twyford"
+            title="Twyford"
+            src="/images/trains/stations/twy.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Tyseley"
-          title="Tyseley"
-          src="/images/trains/stations/tys.webp"
-        />
+          href="https://wikipedia.org/wiki/Tyseley railway station"
+        >
+          <img
+            alt="Tyseley"
+            title="Tyseley"
+            src="/images/trains/stations/tys.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
