--- a/trains/stations/U/index.html
+++ b/trains/stations/U/index.html
@@ -197,12 +197,16 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="University"
-          title="University"
-          src="/images/trains/stations/uni.webp"
-        />
+          href="https://wikipedia.org/wiki/University railway station"
+        >
+          <img
+            alt="University"
+            title="University"
+            src="/images/trains/stations/uni.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
