--- a/trains/stations/W/index.html
+++ b/trains/stations/W/index.html
@@ -197,117 +197,181 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Water Orton"
-          title="Water Orton"
-          src="/images/trains/stations/wto.webp"
-        />
+          href="https://wikipedia.org/wiki/Water Orton railway station"
+        >
+          <img
+            alt="Water Orton"
+            title="Water Orton"
+            src="/images/trains/stations/wto.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Walsall"
-          title="Walsall"
-          src="/images/trains/stations/wsl.webp"
-        />
+          href="https://wikipedia.org/wiki/Walsall railway station"
+        >
+          <img
+            alt="Walsall"
+            title="Walsall"
+            src="/images/trains/stations/wsl.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Warwick"
-          title="Warwick"
-          src="/images/trains/stations/wrw.webp"
-        />
+          href="https://wikipedia.org/wiki/Warwick railway station"
+        >
+          <img
+            alt="Warwick"
+            title="Warwick"
+            src="/images/trains/stations/wrw.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Warwick Parkway"
-          title="Warwick Parkway"
-          src="/images/trains/stations/wrp.webp"
-        />
+          href="https://wikipedia.org/wiki/Warwick Parkway railway station"
+        >
+          <img
+            alt="Warwick Parkway"
+            title="Warwick Parkway"
+            src="/images/trains/stations/wrp.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Whitehaven"
-          title="Whitehaven"
-          src="/images/trains/stations/wth.webp"
-        />
+          href="https://wikipedia.org/wiki/Whitehaven railway station"
+        >
+          <img
+            alt="Whitehaven"
+            title="Whitehaven"
+            src="/images/trains/stations/wth.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Wilmcote"
-          title="Wilmcote"
-          src="/images/trains/stations/wvs.webp"
-        />
+          href="https://wikipedia.org/wiki/Wilmcote railway station"
+        >
+          <img
+            alt="Wilmcote"
+            title="Wilmcote"
+            src="/images/trains/stations/wvs.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Wilmslow"
-          title="Wilmslow"
-          src="/images/trains/stations/wml.webp"
-        />
+          href="https://wikipedia.org/wiki/Wilmslow railway station"
+        >
+          <img
+            alt="Wilmslow"
+            title="Wilmslow"
+            src="/images/trains/stations/wml.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Wilnecote"
-          title="Wilnecote"
-          src="/images/trains/stations/wne.webp"
-        />
+          href="https://wikipedia.org/wiki/Wilnecote railway station"
+        >
+          <img
+            alt="Wilnecote"
+            title="Wilnecote"
+            src="/images/trains/stations/wne.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Witton"
-          title="Witton"
-          src="/images/trains/stations/wtt.webp"
-        />
+          href="https://wikipedia.org/wiki/Witton railway station"
+        >
+          <img
+            alt="Witton"
+            title="Witton"
+            src="/images/trains/stations/wtt.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Woking"
-          title="Woking"
-          src="/images/trains/stations/wok.webp"
-        />
+          href="https://wikipedia.org/wiki/Woking railway station"
+        >
+          <img
+            alt="Woking"
+            title="Woking"
+            src="/images/trains/stations/wok.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Wootton Wawen"
-          title="Wootton Wawen"
-          src="/images/trains/stations/www.webp"
-        />
+          href="https://wikipedia.org/wiki/Wootton Wawen railway station"
+        >
+          <img
+            alt="Wootton Wawen"
+            title="Wootton Wawen"
+            src="/images/trains/stations/www.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Worcester Foregate Street"
-          title="Worcester Foregate Street"
-          src="/images/trains/stations/wof.webp"
-        />
+          href="https://wikipedia.org/wiki/Worcester Foregate Street railway station"
+        >
+          <img
+            alt="Worcester Foregate Street"
+            title="Worcester Foregate Street"
+            src="/images/trains/stations/wof.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Worcester Shrub Hill"
-          title="Worcester Shrub Hill"
-          src="/images/trains/stations/wos.webp"
-        />
+          href="https://wikipedia.org/wiki/Worcester Shrub Hill railway station"
+        >
+          <img
+            alt="Worcester Shrub Hill"
+            title="Worcester Shrub Hill"
+            src="/images/trains/stations/wos.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Worcestershire Parkway"
-          title="Worcestershire Parkway"
-          src="/images/trains/stations/wop.webp"
-        />
+          href="https://wikipedia.org/wiki/Worcestershire Parkway railway station"
+        >
+          <img
+            alt="Worcestershire Parkway"
+            title="Worcestershire Parkway"
+            src="/images/trains/stations/wop.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Wylde Green"
-          title="Wylde Green"
-          src="/images/trains/stations/wyl.webp"
-        />
+          href="https://wikipedia.org/wiki/Wylde Green railway station"
+        >
+          <img
+            alt="Wylde Green"
+            title="Wylde Green"
+            src="/images/trains/stations/wyl.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="Wythall"
-          title="Wythall"
-          src="/images/trains/stations/wyt.webp"
-        />
+          href="https://wikipedia.org/wiki/Wythall railway station"
+        >
+          <img
+            alt="Wythall"
+            title="Wythall"
+            src="/images/trains/stations/wyt.webp"
+          />
+        </a>
       </div>
 
       <div class="counter">
