--- a/trains/stations/Y/index.html
+++ b/trains/stations/Y/index.html
@@ -197,19 +197,23 @@
       </div>
 
       <div class="stations">
-        <img
+        <a
           class="station-img"
-          alt="Yardley Wood"
-          title="Yardley Wood"
-          src="/images/trains/stations/yrd.webp"
-        />
+          href="https://wikipedia.org/wiki/Yardley Wood railway station"
+        >
+          <img
+            alt="Yardley Wood"
+            title="Yardley Wood"
+            src="/images/trains/stations/yrd.webp"
+          />
+        </a>
 
-        <img
+        <a
           class="station-img"
-          alt="York"
-          title="York"
-          src="/images/trains/stations/yrk.webp"
-        />
+          href="https://wikipedia.org/wiki/York railway station"
+        >
+          <img alt="York" title="York" src="/images/trains/stations/yrk.webp" />
+        </a>
       </div>
 
       <div class="counter">
